# scip-tools

./: Cargo.toml  README.md
.github/workflows/: ci.yml
scip-coverage/: Cargo.toml  README.md
scip-coverage/src/: main.rs
scip-tree-sitter/: Cargo.toml  README.md
scip-tree-sitter/src/: main.rs
